--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -9,14 +9,14 @@
 
 .my-header img {
     width: 100%;
-    height: 900px;
+    height: 100%;
     position: absolute;
     z-index: -22;
     top: 0;
 }
 
 .my-header .my-navbar {
-    background: rgba(0,0,0,0.1) !important;
+    background: rgba(0, 0, 0, 0.1) !important;
 }
 
 .my-navbar .navbar-brand {
@@ -24,10 +24,12 @@
 }
 
 body {
-  font-size: 18 px;
-  line-height: 34px;
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  color: #777;
+    font-size: 18 px;
+    line-height: 34px;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    color: #777;
+    width: 100%;
+    height: 100%;
 }
 
 .container {
@@ -36,28 +38,89 @@ body {
     padding: 0 30px;
     background-color: #fff;
     line-height: 1.5em;
-  }
+}
 
-  .page-header {
+.page-header {
     border-bottom: 3px solid #ccc;
-  }
+    font-size: 30px;
+    margin-top: 10px;
+}
 
-  h1 {
+.img-auth {
+    width: 100%;
+    min-width: 120px;
+}
+
+h1 {
     font-size: 30px;
     line-height: 40px;
-    padding-bottom: 20px;
+    padding: 20px 0;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: 700;
-    color: #1e2525;
-  }
+    color: #777;
+}
+
+label {
+    font-weight: 700;
+}
+
+.btn {
+    margin: 10px 0;
+}
+
+#logo {
+    width: 280px;
+    height: 10%;
+    float: left;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    text-align: center;
+    line-height: 50px;
+    background-color: #777;
+    color: #fff;
+    font-weight: 700;
+    font-size: 30px;
+    text-decoration: none;
+}
+
+.navbar-text {
+    font-size: 18px;
+    margin-left: 20px;
+}
 
 .footer {
     background-color: #363E40;
-    color: #fff;
     padding: 20px;
-    clear: both;
     border-top: 8px solid #1e2525;
     color: #ccc;
-    font-size: 12px;
+    font-size: 18px;
     text-align: center;
-  }
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
+.btn-primary {
+    background-color: #777;
+}
+
+.work {
+    width: 210px;
+    overflow: auto;
+    position: relative;
+    float: left;
+    margin: 20px 0 20px;
+}
+
+.work h3 {
+    border-bottom: 0;
+    background-color: #777;
+    color: #fff;
+    text-align: center;
+    position: absolute;
+    bottom: 20px;
+    padding: 15px;
+    width: 100%;
+    line-height: 30px;
+    margin-bottom: 0;
+    font-weight: 600;
+}
